Graphic Doctor Bottom Added

--- a/app/src/main/res/drawable/gr_doctors.xml
+++ b/app/src/main/res/drawable/gr_doctors.xml
@@ -21,7 +21,7 @@
     </group>
     <path
         android:pathData="M414.873,171.69c-31.825,-63.384 -61.888,-141.106 -146.082,-151.321c-56.354,-6.837 -118.369,13.042 -141.454,82.684c-23.084,69.642 -68.232,108.864 -83.169,129.48C6.982,283.856 20.584,353.734 96.353,368.525c75.77,14.791 104.072,18.502 148.371,55.991c64.601,54.67 180.877,14.112 216.235,-41.405C530.295,274.245 446.698,235.074 414.873,171.69z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M155.982,213.084c1.16,11.68 -52.905,0.542 -52.605,-9.252c0.285,-9.227 4.734,-25.517 4.734,-32.01c0,-19.61 18.556,-2.812 31.47,-4.55C138.924,178.629 149.477,184.264 155.982,213.084z"
         android:fillColor="#FFB474"/>
@@ -38,13 +38,13 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M91.09,458.543c0,0 -2.052,4.58 -6.559,7.36c-2.194,1.353 -6.399,1.957 -9.75,2.74c-2.004,0.47 -2.482,4.279 0.622,4.644c7.111,0.835 23.719,0.2 28.463,-2.775c3.9,-2.579 -0.414,-11.462 -0.414,-11.462L91.09,458.543z"
-        android:fillColor="#002A32"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M117.921,306.063c0,0 11.395,23.339 -12.939,87.137c0,0 5.919,50.444 1.24,68.977l-19.517,-0.522c0,0 -12.887,-56.17 -13.53,-64.781c-0.645,-8.611 1.813,-65.955 12.353,-102.737L117.921,306.063z"
         android:fillColor="#46CDC0"/>
     <path
         android:pathData="M129.587,461.393c0,0 -2.022,4.508 -6.457,7.245c-2.159,1.331 -6.297,1.924 -9.596,2.696c-1.973,0.465 -2.442,4.213 0.612,4.574c6.993,0.821 23.343,0.195 28.013,-2.734c3.837,-2.541 -0.408,-11.278 -0.408,-11.278L129.587,461.393z"
-        android:fillColor="#002A32"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M163.979,303.378c0,0 3.731,17.815 -15.876,76.846c0,0 1.496,65.656 -3.179,84.189l-19.52,-0.52c0,0 -9.798,-46.052 -10.443,-54.663c-0.486,-6.531 -5.783,-77.886 0.645,-108.743c2.047,-9.829 11.452,2.513 15.32,-4.452L163.979,303.378z"
         android:fillColor="#46CDC0"/>
@@ -172,13 +172,13 @@
         android:fillColor="#FFBE9D"/>
     <path
         android:pathData="M349.745,457.504c0,0 -2.052,4.58 -6.559,7.36c-2.194,1.353 -6.399,1.957 -9.75,2.74c-2.004,0.47 -2.482,4.279 0.622,4.644c7.111,0.835 23.719,0.2 28.463,-2.775c3.9,-2.579 -0.414,-11.462 -0.414,-11.462L349.745,457.504z"
-        android:fillColor="#002A32"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M376.576,305.024c0,0 12.173,33.922 -12.16,97.719c0,0 5.14,39.862 0.462,58.395l-19.517,-0.522c0,0 -9.801,-46.05 -10.444,-54.661c-0.645,-8.611 -2.548,-77.401 13.47,-106.237L376.576,305.024z"
         android:fillColor="#46CDC0"/>
     <path
         android:pathData="M388.241,460.354c0,0 -2.022,4.508 -6.457,7.245c-2.159,1.331 -6.297,1.924 -9.596,2.696c-1.973,0.465 -2.442,4.213 0.612,4.574c6.993,0.821 23.343,0.195 28.013,-2.734c3.837,-2.541 -0.408,-11.278 -0.408,-11.278L388.241,460.354z"
-        android:fillColor="#002A32"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M422.633,302.339c0,0 12.694,12.891 -11.636,76.694c0,0 -2.744,65.808 -7.419,84.341l-19.52,-0.52c0,0 -9.798,-46.052 -10.443,-54.663c-0.486,-6.531 -5.783,-77.886 0.645,-108.743c2.047,-9.829 11.452,2.513 15.32,-4.452L422.633,302.339z"
         android:fillColor="#46CDC0"/>
@@ -324,10 +324,10 @@
         android:fillColor="#322C29"/>
     <path
         android:pathData="M241.072,292.932c3.043,6.528 18.056,92.845 21.926,100.714c0,0 -8.898,40.141 -8.214,67.678h27.275c0,0 8.221,-54.337 9.562,-64.618c0.646,-4.944 -7.092,-89.232 -9.181,-106.919L241.072,292.932z"
-        android:fillColor="#002A32"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M219.987,361.544c2.669,9.764 4.472,26.864 3.026,32.09c-11.076,40.098 -14.73,53.636 -15.761,69.596l23.348,1.527c0,0 17.983,-55.611 21.884,-65.214c2.044,-5.031 7.718,-51.915 5.636,-74.618L219.987,361.544z"
-        android:fillColor="#002A32"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M221.426,218.321c-1.139,11.459 51.909,0.53 51.615,-9.079c-0.28,-9.054 -2.899,-25.28 -4.645,-31.407c-4.942,-17.333 -18.206,-2.759 -30.878,-4.465C234.15,183.9 227.808,190.043 221.426,218.321z"
         android:fillColor="#FFBE9D"/>
