--- a/app/src/main/res/drawable/gr_emergency.xml
+++ b/app/src/main/res/drawable/gr_emergency.xml
@@ -20,7 +20,7 @@
         android:fillColor="#FFFFFF"/>
     <path
         android:pathData="M397.164,129.653m-98.311,0a98.311,98.311 0,1 1,196.622 0a98.311,98.311 0,1 1,-196.622 0"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M389.202,132.005m-98.311,0a98.311,98.311 0,1 1,196.622 0a98.311,98.311 0,1 1,-196.622 0"
         android:strokeWidth="0.25"
@@ -145,7 +145,7 @@
         android:fillColor="#FFD788"/>
     <path
         android:pathData="M188.843,332.994h-41.122c-19.24,0 -32.913,-18.726 -27.055,-37.052l6.79,-21.242l60.31,-7.287L188.843,332.994z"
-        android:fillColor="#B7C9B9"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M194.982,188.178l17.337,61.755l-17.337,0l-18.234,-30.877z"
         android:fillColor="#EFEBDF"/>
@@ -309,14 +309,14 @@
         android:pathData="M300.69,257.119l-9.871,-36.239l-0.08,0v-8.712c0,-3.354 -2.719,-6.073 -6.073,-6.073h-14.061"
         android:strokeLineJoin="round"
         android:fillColor="#00000000"
-        android:strokeColor="@color/colorAccent"
+        android:strokeColor="@color/colorGrBackground"
         android:strokeLineCap="round"/>
     <path
         android:strokeWidth="1"
         android:pathData="M290.818,220.881l9.871,36.239c1.127,4.139 -1.988,8.217 -6.278,8.217"
         android:strokeLineJoin="round"
         android:fillColor="#00000000"
-        android:strokeColor="@color/colorAccent"
+        android:strokeColor="@color/colorGrBackground"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M235.584,217.51c-0.011,0 -0.024,-0.001 -0.035,-0.001c-0.341,-0.019 -0.602,-0.311 -0.582,-0.651l1.695,-30.211c0.018,-0.34 0.307,-0.611 0.651,-0.582c0.341,0.019 0.602,0.311 0.582,0.651l-1.695,30.211C236.182,217.255 235.909,217.51 235.584,217.51z"
@@ -350,16 +350,16 @@
         android:fillColor="#D1CEC7"/>
     <path
         android:pathData="M227.782,289.177h-27.496l-13.568,146.892h4.247c31.906,-85.352 41.066,-123.755 43.696,-138.705C235.414,293.089 232.123,289.177 227.782,289.177z"
-        android:fillColor="#B7C9B9"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M187.236,430.475c0,0 30.461,-78.503 22.617,-131.553c-0.499,-3.377 -9.566,-9.745 -9.566,-9.745L187.236,430.475z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M201.158,289.177H177.81l-54.828,141.297l3.433,5.594c39.513,-60.733 75.588,-114.632 83.06,-134.949C211.607,295.324 207.333,289.177 201.158,289.177z"
-        android:fillColor="#B7C9B9"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M168.825,313.691c-13.347,3.271 -27.402,-1.368 -30.147,-9.734c-3.113,-9.489 4.823,-14.78 4.823,-14.78l-5.853,-15.709l-10.193,1.232l-6.79,21.242c-5.858,18.326 7.815,37.052 27.055,37.052h13.087l-37.826,97.481C179.719,340.191 168.825,313.691 168.825,313.691z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M126.802,276.747l61.057,0l0.269,12.43l-65.3,0z"
         android:fillColor="#70927F"/>
@@ -459,81 +459,81 @@
         android:fillColor="#E8DFCF"/>
     <path
         android:pathData="M40.381,349.879h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M55.756,342.331h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M47.19,371.578h1.206v5.031h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M51.46,356.341h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M58.049,399.407h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M74.487,354.572h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M40.381,387.545h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M41.639,409.04h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M52.961,386.395h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M16.288,387.417h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M22.069,378.026h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M24.725,392.449h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M59.111,367.212h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M77.003,374.093h1.206v5.032h-1.206z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M73.608,418.874h-49.22c-1.33,0 -2.355,1.171 -2.179,2.489l5.1,38.176c0.521,3.9 3.848,6.812 7.783,6.812h28.661c4,0 7.361,-3.007 7.804,-6.983l4.236,-38.053C75.938,420.014 74.919,418.874 73.608,418.874z"
-        android:fillColor="@color/colorAccent"/>
+        android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M73.504,441.883l0.861,-7.737l-50.448,0l1.034,7.737z"
         android:fillColor="#70927F"/>
     <path
         android:pathData="M24.863,222.172m-12.208,0a12.208,12.208 0,1 1,24.416 0a12.208,12.208 0,1 1,-24.416 0"
         android:strokeWidth="0.25"
-        android:fillColor="@color/colorAccent"
+        android:fillColor="@color/colorGrBackground"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M405.79,250.674m-12.208,0a12.208,12.208 0,1 1,24.416 0a12.208,12.208 0,1 1,-24.416 0"
         android:strokeWidth="0.25"
-        android:fillColor="@color/colorAccent"
+        android:fillColor="@color/colorGrBackground"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M391.833,328.147m-6.104,0a6.104,6.104 0,1 1,12.208 0a6.104,6.104 0,1 1,-12.208 0"
         android:strokeWidth="0.25"
-        android:fillColor="@color/colorAccent"
+        android:fillColor="@color/colorGrBackground"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M475.505,137.657l-4.698,19.322l-14.623,-14.624z"
         android:strokeWidth="0.25"
-        android:fillColor="@color/colorAccent"
+        android:fillColor="@color/colorGrBackground"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M149.569,83.16l-16.985,10.34l0,-20.68z"
         android:strokeWidth="0.25"
-        android:fillColor="@color/colorAccent"
+        android:fillColor="@color/colorGrBackground"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M476.708,322.043l-16.985,10.34l0,-20.68z"
         android:strokeWidth="0.25"
-        android:fillColor="@color/colorAccent"
+        android:fillColor="@color/colorGrBackground"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M495.36,284.319h-80.639c-4.932,0 -8.93,-3.998 -8.93,-8.93v-15.951c0,-4.932 3.998,-8.93 8.93,-8.93h80.639c4.932,0 8.93,3.998 8.93,8.93v15.951C504.29,280.32 500.292,284.319 495.36,284.319z"
