--- a/app/src/main/res/drawable/gr_plasma.xml
+++ b/app/src/main/res/drawable/gr_plasma.xml
@@ -84,13 +84,13 @@
         android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M147.68,222.164c13.676,2.011 43.974,-8.442 43.974,-8.442c0.768,-5.812 -1.152,-10.727 -1.152,-10.727c-28.676,-1.241 -39.04,3.071 -39.04,3.071c-10.549,-18.159 -14.417,-22.397 -18.037,-24.807c-3.62,-2.409 -14.762,-3.363 -14.762,-3.363s-4.849,43.228 -7.905,43.228c-3.056,0 -11.822,-43.578 -11.822,-43.578s-11.521,1.289 -19.83,5.802c-8.309,4.512 -16.577,31.027 -17.051,43.146c-0.645,16.519 1.602,36.912 1.602,36.912c5.183,2.389 11.5,0.258 11.5,0.258s3.53,-26.238 3.517,-36.695c-0.002,-1.344 4.504,-16.263 4.504,-16.263c-1.516,8.425 -3.182,70.125 -3.182,70.125c32.142,11.983 53.432,-0.617 53.432,-0.617c-0.775,-19.195 -2.814,-69.467 -2.814,-69.467S140.607,221.124 147.68,222.164z"
-        android:fillColor="#FFFFFF"/>
+        android:fillColor="@color/colorGrDoctorApron"/>
     <path
         android:pathData="M97.865,201.914l-4.345,7.052c0,0 8.02,9.776 17.238,12.158c-3.056,0 -11.822,-43.578 -11.822,-43.578s-3.28,0.373 -7.592,1.397c-0.508,4.669 -1.701,15.74 -2.169,21.12L97.865,201.914z"
-        android:fillColor="#EFE8DC"/>
+        android:fillColor="@color/colorGrDoctorApron"/>
     <path
         android:pathData="M126.689,208.966l-3.925,-7.052l7.85,-1.851c-0.407,-5.179 -1.42,-15.633 -1.905,-20.572c-4.532,-1.12 -10.046,-1.595 -10.046,-1.595s-4.849,43.227 -7.905,43.228l0,0C119.086,218.742 126.689,208.966 126.689,208.966z"
-        android:fillColor="#EFE8DC"/>
+        android:fillColor="@color/colorGrDoctorApron"/>
     <path
         android:pathData="M104.681,164.726l-2.823,2.358c0,0 -13.103,1.068 -18.139,-14.556c-5.036,-15.624 -6.188,-31.708 5.038,-33.985c0,0 7.964,-12.266 29.614,-7.148s27.739,20.782 15.861,28.058L104.681,164.726z"
         android:fillColor="#563925"/>
@@ -152,10 +152,10 @@
         android:pathData="M124.041,163.327c-0.764,0.18 -1.527,0.181 -2.291,0.003c-0.22,-0.051 -0.174,-0.403 0.048,-0.351c0.735,0.171 1.463,0.17 2.196,-0.003C124.216,162.923 124.261,163.275 124.041,163.327L124.041,163.327z"/>
     <path
         android:pathData="M86.897,262.141c0,0 8.132,1.438 14.85,1.712c0,0 0,12.501 -7.974,12.775C85.798,276.903 86.897,262.141 86.897,262.141z"
-        android:fillColor="#EFE8DC"/>
+        android:fillColor="@color/colorGrDoctorApron"/>
     <path
         android:pathData="M130.611,262.244c0,0 -6.694,1.193 -12.19,1.266c0,0 -0.459,12.492 6.043,13.006C130.966,277.03 130.611,262.244 130.611,262.244z"
-        android:fillColor="#EFE8DC"/>
+        android:fillColor="@color/colorGrDoctorApron"/>
     <path
         android:pathData="M110.758,221.124c0,0 1.134,37.694 0,64.878"
         android:strokeLineJoin="round"
