Graphic Doctor Screen Color Added

--- a/app/src/main/res/drawable/gr_analysis.xml
+++ b/app/src/main/res/drawable/gr_analysis.xml
@@ -40,7 +40,7 @@
             android:fillColor="#D0E2F2"/>
         <path
             android:pathData="M162.267,120.224c-5.369,12.228 -6.511,44.111 1.862,58.433c8.636,14.773 31.437,16.544 43.614,16.265c26.218,-0.601 28.041,-12.068 34.069,-39.775c8.945,-41.12 1.942,-52.798 -20.024,-62.442C199.822,83.062 173.174,95.382 162.267,120.224z"
-            android:fillColor="#FFC5A0"/>
+            android:fillColor="@color/colorGrDoctorSkin"/>
         <path
             android:pathData="M234.188,153.12a5.331,3.199 97.4,1 0,-6.345 -0.824a5.331,3.199 97.4,1 0,6.345 0.824z"
             android:fillColor="#312A3C"/>
