--- a/app/src/main/res/drawable/gr_doctors.xml
+++ b/app/src/main/res/drawable/gr_doctors.xml
@@ -330,7 +330,7 @@
         android:fillColor="@color/colorGrDoctorBottom"/>
     <path
         android:pathData="M221.426,218.321c-1.139,11.459 51.909,0.53 51.615,-9.079c-0.28,-9.054 -2.899,-25.28 -4.645,-31.407c-4.942,-17.333 -18.206,-2.759 -30.878,-4.465C234.15,183.9 227.808,190.043 221.426,218.321z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrDoctorSkin"/>
     <path
         android:pathData="M223.351,255.627c-1.032,-2.363 -2.036,-4.957 -2.986,-7.695c-6.769,-19.514 -16.696,-50.504 6.243,-65.554c2.029,-1.331 8.466,-2.809 8.466,-2.809s18.543,10.165 33.9,0.346c12.141,7.914 13.42,9.099 12.863,21.231c-0.558,12.135 1.194,19.305 1.691,25.915c0.518,6.805 -0.492,43.783 1.215,67.005c1.687,22.945 -62.782,-2.75 -62.782,-2.75S232.938,277.529 223.351,255.627z"
         android:fillColor="#46CDC0"/>
@@ -386,10 +386,10 @@
         android:fillColor="#FCFCFC"/>
     <path
         android:pathData="M244.555,228.42l-2.085,8.624l-3.9,-0.385l-4.021,-7.857C234.549,228.802 239.279,226.772 244.555,228.42z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrDoctorSkin"/>
     <path
         android:pathData="M283.251,232.087l0.824,4.571l11.706,2.803c0,0 3.134,-4.618 0,-8.245c-1.846,-2.137 -5.484,-2.637 -5.484,-2.637l-7.046,2.967"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrDoctorSkin"/>
     <path
         android:pathData="M284.745,217.112l0.949,13.406l2.425,-1.021z"
         android:strokeAlpha="0.07"
@@ -414,7 +414,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M241.519,95.089c0,0 -7.875,1.878 -16.131,6.704c-8.466,4.945 -17.333,12.993 -18.519,25.287c-0.686,7.079 -0.073,13.922 1.805,20.192c4.568,15.235 16.626,27.075 35.791,30.668c13.525,2.538 28.169,0.668 39.052,-7.338c10.886,-8.007 17.4,-24.984 14.685,-39.124c-2.709,-14.137 -9.213,-21.636 -19.258,-28.172C268.901,96.771 255.933,94.033 241.519,95.089z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrDoctorSkin"/>
     <path
         android:pathData="M258.453,151.444c2.176,2.708 6.862,3.559 7.9,-0.688c0.345,-1.417 2.581,-0.985 2.231,0.444c-0.586,2.399 -2.393,4.378 -4.896,4.813c-2.861,0.495 -5.39,-1.139 -7.111,-3.281C255.657,151.589 257.541,150.309 258.453,151.444L258.453,151.444z"
         android:fillColor="#FF9E7C"/>
