Graphic Doctor Shoe Added

--- a/app/src/main/res/drawable/gr_doctors.xml
+++ b/app/src/main/res/drawable/gr_doctors.xml
@@ -318,10 +318,10 @@
         android:fillColor="#00C2AE"/>
     <path
         android:pathData="M272.002,459.388c0,0 2.549,4.698 7.561,7.282c2.441,1.258 6.952,1.554 10.579,2.125c2.163,0.335 0.257,4.778 -3.008,5.414c-7.478,1.464 -22.449,1.697 -27.727,-1.085c-4.349,-2.418 -0.493,-12.197 -0.493,-12.197L272.002,459.388z"
-        android:fillColor="#322C29"/>
+        android:fillColor="@color/colorGrDoctorShoe"/>
     <path
         android:pathData="M223.611,461.323c0,0 2.351,4.807 7.259,7.601c2.382,1.356 6.24,2.026 9.831,2.74c2.149,0.429 2.401,3.527 -0.687,4.775c-12.434,5.037 -22.823,0.057 -27.983,-2.934c-4.242,-2.606 -1.553,-11.175 -1.553,-11.175L223.611,461.323z"
-        android:fillColor="#322C29"/>
+        android:fillColor="@color/colorGrDoctorShoe"/>
     <path
         android:pathData="M241.072,292.932c3.043,6.528 18.056,92.845 21.926,100.714c0,0 -8.898,40.141 -8.214,67.678h27.275c0,0 8.221,-54.337 9.562,-64.618c0.646,-4.944 -7.092,-89.232 -9.181,-106.919L241.072,292.932z"
         android:fillColor="@color/colorGrDoctorBottom"/>
