--- a/app/src/main/res/drawable/gr_doctors.xml
+++ b/app/src/main/res/drawable/gr_doctors.xml
@@ -406,7 +406,7 @@
         android:fillColor="#06343B"/>
     <path
         android:pathData="M298.092,118.626c0,0 7.447,35.565 0.728,45.757c-8.499,12.89 -26.267,11.851 -26.267,11.851S301.628,135.328 298.092,118.626z"
-        android:fillColor="#2C1F25"/>
+        android:fillColor="@color/colorGrDoctorHair"/>
     <path
         android:pathData="M267.532,177.903c0,0 -18.226,2.058 -23.828,-0.526c0,0 6.607,5.136 24.292,3.151L267.532,177.903z"
         android:strokeAlpha="0.07"
@@ -423,10 +423,10 @@
         android:fillColor="#FF9E7C"/>
     <path
         android:pathData="M242.565,136.613a3.641,2.575 88.224,1 0,-5.147 0.16a3.641,2.575 88.224,1 0,5.147 -0.16z"
-        android:fillColor="#2C1F25"/>
+        android:fillColor="@color/colorGrDoctorHair"/>
     <path
         android:pathData="M282.063,135.239a3.642,2.575 88.229,1 0,-5.147 0.159a3.642,2.575 88.229,1 0,5.147 -0.159z"
-        android:fillColor="#2C1F25"/>
+        android:fillColor="@color/colorGrDoctorHair"/>
     <path
         android:pathData="M217.559,149.032c0,5.556 4.503,10.057 10.055,10.057c5.556,0 10.057,-4.5 10.057,-10.057c0,-5.551 -4.501,-10.053 -10.057,-10.053C222.063,138.98 217.559,143.482 217.559,149.032z"
         android:fillColor="#FFA986"/>
@@ -435,5 +435,5 @@
         android:fillColor="#FFA986"/>
     <path
         android:pathData="M287.628,166.95c19.412,-15.11 13.787,-58.714 -2.778,-75.28c-16.565,-16.564 -50.88,-10.811 -50.88,-10.811c-31.477,6.548 -41.777,24.813 -41.777,53.326c0,18.282 -0.266,22.969 9.494,31.478c11.12,9.693 45.367,20.572 34.949,10.597c-11.115,-10.649 -11.857,-24.044 -9.588,-34.226c1.055,-4.725 2.268,-10.178 2.268,-10.178c29.486,-1.319 57.145,-22.771 57.145,-22.771c8.576,8.38 10.779,34.168 8.364,43.444C292.476,161.55 287.955,166.188 287.628,166.95z"
-        android:fillColor="#2C1F25"/>
+        android:fillColor="@color/colorGrDoctorHair"/>
 </vector>
