Graphic Doctor Top Added

--- a/app/src/main/res/drawable/gr_analysis.xml
+++ b/app/src/main/res/drawable/gr_analysis.xml
@@ -70,7 +70,7 @@
             android:fillColor="#F0FCFF"/>
         <path
             android:pathData="M198.619,159.685c11.939,-4.771 28.504,-3.284 39.456,3.542c1.077,0.672 2.121,1.405 2.8,2.301c0.805,1.062 1.04,2.274 1.193,3.453c0.949,7.311 -0.908,14.962 -7.203,20.401c-6.295,5.439 -17.616,8.069 -27.094,5.009c-8.861,-2.861 -14.118,-9.687 -17.144,-16.295C186.961,170.093 188.226,163.839 198.619,159.685z"
-            android:fillColor="#7BBAB1"/>
+            android:fillColor="@color/colorGrDoctorTop"/>
         <path
             android:pathData="M203.19,166.601c11.15,-1.808 21.714,-3.503 31.083,4.049c0.306,0.247 0.852,-0.078 0.589,-0.454c-6.874,-9.846 -22.11,-6.11 -31.847,-4.227C202.596,166.049 202.779,166.667 203.19,166.601L203.19,166.601z"
             android:fillColor="#6BA491"/>
