Graphic Patient Shoe added

--- a/app/src/main/res/drawable/gr_analysis.xml
+++ b/app/src/main/res/drawable/gr_analysis.xml
@@ -547,7 +547,7 @@
             android:fillColor="#312A3C"/>
         <path
             android:pathData="M411.178,340.583c44.784,-26.884 21.314,-62.244 13.995,-77.668c-11.266,-23.742 1.345,-62.666 -2.464,-78.176c-5.376,-21.888 -30.121,-59.773 -69.438,-41.414c-10.909,5.094 -18.896,15.999 -20.416,27.942c9.879,5.029 22.839,9.027 33.312,11.668c-0.926,2.863 -5.155,13.673 -8.591,26.941c-1.499,5.79 8.171,14.46 5.233,19.791C336.002,278.318 374.839,362.398 411.178,340.583z"
-            android:fillColor="#312A3C"/>
+            android:fillColor="@color/colorGrPatientHair"/>
         <path
             android:pathData="M373.259,212.976c4.219,2.272 4.974,7.375 2.66,11.128c-5.763,9.348 -18.37,7.484 -27.509,6.264C350.784,226.437 366.789,209.491 373.259,212.976z"
             android:fillColor="#FFC5A0"/>
