--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="colorGrPatientHair">#312A3C</color>
     <color name="colorGrPatientTop">#7BBAB1</color>
     <color name="colorGrPatientBottom">#7BBAB1</color>
-    <color name="colorGrPatientShoe">#7BBAB1</color>
+    <color name="colorGrPatientShoe">#000</color>
 
     <color name="colorGrDoctorSkin">#FFD19F</color>
     <color name="colorGrDoctorHair">#2E3749</color>
